--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,1 +1,3 @@
-<p>course-list works!</p>
+<div class="flex gap-4 justify-center ">
+<div *ngFor="let course of courses" [course]="course" class="app-course-list-item"></div>
+</div>
