--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100 shadow-md mb-8">
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-xl">Nachhilfe KWM</a>
+    <a routerLink="/" class="btn btn-ghost normal-case text-2xl text-semibold">Nachhilfe KWM</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal p-0">
