--- a/src/app/offer-list/offer-list.component.html
+++ b/src/app/offer-list/offer-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-4 justify-center">
+<div class="md:flex gap-4 justify-center">
   <div *ngFor="let offer of offers" [offer]="offer" class="app-offer-list-item"></div>
 </div>
 
