--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--dynmischer Platzhalter für die Anzeige-->
+<!--dynmischer Platzhalter für die Anzeige / wie index.html-->
 <app-navigation></app-navigation>
 <router-outlet></router-outlet>
