--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,3 +1,3 @@
-<div class="flex gap-4 justify-center ">
+<div class="md:flex gap-4 justify-center ">
 <div *ngFor="let course of courses" [course]="course" class="app-course-list-item"></div>
 </div>
