--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,4 +1,9 @@
-<h1 class="text-violet-500 font-bold mt-10 ml-5 text-xl">Neues Angebot erstellen</h1>
+<div class="mx-6">
+  <h1 class="text-violet-500 font-bold text-xl mb-5">Neues Angebot erstellen</h1>
+
+
+</div>
+
 <div class="mt-10 sm:mt-0">
   <div class="md:grid md:grid-cols-3 md:gap-6">
     <div class="mt-5 md:mt-0 md:col-span-2">
@@ -78,7 +83,7 @@
           </div>
           <div class="px-4 py-3 text-right sm:px-6">
             <button type="submit" [disabled]="offerForm.invalid"
-                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:opacity-40">
               Speichern
             </button>
           </div>
